--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
   </head>
   <body>
     <article class="kort">
-      <div class="closebtn">
-        <a href="#"><img src="closebtn.svg" alt="" /></a>
-      </div>
+      <a class="closebtn" href="#"><img src="closebtn.svg" alt="" /></a>
       <img src="mk.gee.jpg" alt="Mk.gee" />
       <h1>Mk.gee</h1>
       <h2>Guitar god</h2>
